--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -39,3 +39,8 @@
 @import "vendor/font-awesome/brands";
 @import "vendor/magnific-popup/magnific-popup";
 @import "print";
+
+ul {
+    text-align: justify; /* Applies justification */
+    list-style-position: inside; /* Aligns bullets with justified text */
+  }
